# TerrainGeneration

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Git.hpp.in  Version.hpp.in
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.cpp
lib/imgui/: CMakeLists.txt  imgui_config.h
lib/lua/: CMakeLists.txt
lib/stb/: CMakeLists.txt
shader/: default.frag  default.prog  default.vert
src/: CMakeLists.txt  Main.cpp  TerrainHeightMap.cpp  TerrainHeightMap.hpp
src/afk/: Afk.cpp  Afk.hpp  CMakeLists.txt  Version.hpp
src/afk/component/: CMakeLists.txt  ScriptComponent.cpp  ScriptComponent.hpp  TerrainManager.cpp  TerrainManager.hpp
src/afk/debug/: Assert.hpp
src/afk/event/: CMakeLists.txt  Event.hpp  EventManager.cpp  EventManager.hpp
src/afk/io/: CMakeLists.txt  Log.cpp  Log.hpp  ModelLoader.cpp  ModelLoader.hpp  Path.cpp  Path.hpp
src/afk/physics/: CMakeLists.txt  Point.hpp  Transform.cpp  Transform.hpp
src/afk/renderer/: CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp
src/afk/renderer/opengl/: MeshHandle.hpp  ModelHandle.hpp  Renderer.cpp  Renderer.hpp  ShaderHandle.hpp  ShaderProgramHandle.hpp  TextureHandle.hpp
src/afk/script/: CMakeLists.txt  Script.cpp  Script.hpp
src/afk/ui/: CMakeLists.txt  Ui.cpp  Ui.hpp  Unicode.hpp
